# recognition

./: .gitignore  .gitmodules  README.md  Taskfile.yml  pyproject.toml
src/iot_recognition_service/: .gitignore  __init__.py  __main__.py  grpc_service.py  recognition.py  telemetry.py
src/iot_recognition_service/examples/: cli_recognizer.py
src/iot_recognition_service/proto/: .gitignore
src/protos/: entityrecognitionpb.proto
